# manim-fa

./: .gitattributes  README.md  pyproject.toml  setup.py  toml
.github/workflows/: publish-to-pypi.yml  yml
manim_fa/: fonts.py
manim_fa.egg-info/: PKG-INFO
